tests/security/taintSpecializedMethodForStubMadeInstance/output.txt
ERROR: TaintedData - input.hack:10:6 - Detected tainted HTML tags